manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: steganography-app
  namespace: steganography-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: steganography
  template:
    metadata:
      labels:
        app: steganography
    spec:
      containers:
      - name: steganography
        image: christopher402/steganography:2.0.0
        ports:
        - name: web
          containerPort: 8080
