manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: steganography-ingress
  namespace: argocd
spec:
  ingressClassName: traefik
  rules:
  - host: "steganography.tira.com.ro"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: steganography-svc
            port:
              number: 8080
status:
  loadBalancer:
    ingress:
      - ip: 127.0.0.1
